--- a/app/index.html
+++ b/app/index.html
@@ -56,33 +56,19 @@
 				<h3 class="title__subname" id="one">Товары, которые вас могут заинтересовать                     </h3>
 				<div class="submain">               
 					<div class="section">
-						<div class="section__shop"><img class="section__pic" src="./img/wear1.png">
+						<div class="section__shop"><img class="section__pic" src="./img/wear1-1.png">
 							<p class="section__price">520 грн.</p>
 							<p class="section__price_nonprice">460 грн.</p>
 							<button class="button_price"> <a class="button__btn" href="#win1">Подробнее</a></button><a class="overlay" id="win1" href="#x">   </a>
 							<div class="popup"> 
-								<div class="popup__wear">
-									<div class="popup__first">
-										<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
-										<p class="section__description">Размеры: S, M, L </p>
-										<p class="section__description">Материал: Nylon, Spandex</p><img class="deliv__pic" src="./img/wear1-1.png">
-									</div>
-									<!--.fotorama(data-width="100%"     
-									data-minwidth="320"
-									data-maxwidth="820"
-									data-maxheight='300'     
-									data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')  
-									-->
+								<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
+								<div class="popup__wear"> 
+									<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-minheight="100" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear1-1.png"><img src="./img/wear1-2.png"><img src="./img/wear1-3.png"></div>
 									<form class="form" id="form">
+										<div class="popup__first">     
+											<p class="section__description">Размеры: S, M, L </p>
+											<p class="section__description">Материал: Nylon, Spandex  </p>
+										</div>
 										<div class="form-inputs">
 											<div class="form-group">
 												<label for="lead_city">В каком Вы городе?</label>
@@ -107,38 +93,25 @@
 											Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
 											Если вы не уверены в размере - мы поможем по телефону.
 										</p>
-										<button class="btn-lg btn-success" type="submit">Отправить заявку                                   </button><a class="close" title="Закрыть" href="#close"> </a>
+										<button class="btn-lg btn-success" id="send" type="submit">Отправить заявку     </button>
+										<button class="btn-lg btn-success" id="tel" type="submit">Заказать звонок                               </button><a class="close" title="Закрыть" href="#close"> </a>
 									</form>
 								</div>
 							</div>
 						</div>
-						<div class="section__shop"><img class="section__pic" src="./img/wear3.png">
+						<div class="section__shop"><img class="section__pic" src="./img/wear2-1.png">
 							<p class="section__price">520 грн.</p>
 							<p class="section__price_nonprice">460 грн.</p>
 							<button class="button_price"> <a class="button__btn" href="#win2">Подробнее</a></button><a class="overlay" id="win2" href="#x">   </a>
 							<div class="popup"> 
-								<div class="popup__wear">
-									<div class="popup__first">
-										<h3 class="title__name title__name_dark">Купальник SunSet</h3>
-										<p class="section__description">Размеры: S, M, L </p>
-										<p class="section__description">Материал: Nylon, Spandex</p><img class="deliv__pic" src="./img/wear3-3.png">
-									</div>
-									<!--.fotorama(data-width="100%"     
-									data-minwidth="320"
-									data-maxwidth="820"
-									data-maxheight='300'     
-									data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')  
-									-->
+								<h3 class="title__name title__name_dark">Купальник SunSet</h3>
+								<div class="popup__wear">        
+									<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear2-1.png"><img src="./img/wear2-2.png"><img src="./img/wear2-3.png"></div>
 									<form class="form" id="form">
+										<div class="popup__first">     
+											<p class="section__description">Размеры: S, M, L </p>
+											<p class="section__description">Материал: Nylon, Spandex</p>
+										</div>
 										<div class="form-inputs">
 											<div class="form-group">
 												<label for="lead_city">В каком Вы городе?</label>
@@ -168,33 +141,103 @@
 								</div>
 							</div>
 						</div>
-						<div class="section__shop"><img class="section__pic" src="./img/wear4.png">
+						<div class="section__shop"><img class="section__pic" src="./img/wear3-1.png">
 							<p class="section__price">520 грн.</p>
 							<p class="section__price_nonprice">460 грн.</p>
 							<button class="button_price"> <a class="button__btn" href="#win3">Подробнее</a></button><a class="overlay" id="win3" href="#x">   </a>
 							<div class="popup"> 
-								<div class="popup__wear">
-									<div class="popup__first">
-										<h3 class="title__name title__name_dark">Купальник SunRise</h3>
-										<p class="section__description">Размеры: S, M, L </p>
-										<p class="section__description">Материал: Nylon, Spandex</p><img class="deliv__pic" src="./img/wear4-4.png">
-									</div>
-									<!--.fotorama(data-width="100%"     
-									data-minwidth="320"
-									data-maxwidth="820"
-									data-maxheight='300'     
-									data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')
-									img(src='./img/wear.jpg')
-									img(src='./img/girl.jpg')  
-									-->
+								<h3 class="title__name title__name_dark">Купальник SunRise</h3>
+								<div class="popup__wear">  
+									<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear3-1.png"><img src="./img/wear3-2.png"><img src="./img/wear3-3.png"><img src="./img/wear3-4.png"><img src="./img/wear3-5.png"><img src="./img/wear3-6.png"></div>
 									<form class="form" id="form">
+										<div class="popup__first">     
+											<p class="section__description">Размеры: S, M, L </p>
+											<p class="section__description">Материал: Nylon, Spandex</p>
+										</div>
+										<div class="form-inputs">
+											<div class="form-group">
+												<label for="lead_city">В каком Вы городе?</label>
+												<input class="group__form form-control" id="lead_city" type="name" placeholder="к примеру, Киев">
+											</div>
+											<div class="form-group"> 
+												<label for="lead_phone">Номер телефона</label>
+												<input class="group__input form-control" id="lead_phone" type="phone" placeholder="+38 123 456 7890">
+											</div>
+										</div>
+										<div class="delivery"> 
+											<label for="lead_delivery">Как желаете получить?
+												<select class="group__select form-control" id="lead_delivery">
+													<option>Доставка Новой Почтой</option>
+													<option>Приеду в шоурум (г.Киев)</option>
+													<option>Пока не знаю. Жду звонка</option>
+												</select>
+											</label>
+										</div>
+										<p class="deliv">
+											Сразу после отправки заявки Вы окажетесь на странице определения размера.
+											Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
+											Если вы не уверены в размере - мы поможем по телефону.
+										</p>
+										<button class="btn-lg btn-success" type="submit">Отправить заявку                                   </button><a class="close" title="Закрыть" href="#close"> </a>
+									</form>
+								</div>
+							</div>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="./img/wear4-1.png">
+							<p class="section__price">520 грн.</p>
+							<p class="section__price_nonprice">460 грн.</p>
+							<button class="button_price"> <a class="button__btn" href="#win4">Подробнее</a></button><a class="overlay" id="win4" href="#x">   </a>
+							<div class="popup"> 
+								<h3 class="title__name title__name_dark">Купальник SunSet</h3>
+								<div class="popup__wear">            
+									<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear4-1.png"><img src="./img/wear4-2.png"><img src="./img/wear4-3.png"><img src="./img/wear4-4.png"></div>
+									<form class="form" id="form">
+										<div class="popup__first">     
+											<p class="section__description">Размеры: S, M, L </p>
+											<p class="section__description">Материал: Nylon, Spandex </p>
+										</div>
+										<div class="form-inputs">
+											<div class="form-group">
+												<label for="lead_city">В каком Вы городе?</label>
+												<input class="group__form form-control" id="lead_city" type="name" placeholder="к примеру, Киев">
+											</div>
+											<div class="form-group"> 
+												<label for="lead_phone">Номер телефона</label>
+												<input class="group__input form-control" id="lead_phone" type="phone" placeholder="+38 123 456 7890">
+											</div>
+										</div>
+										<div class="delivery"> 
+											<label for="lead_delivery">Как желаете получить?
+												<select class="group__select form-control" id="lead_delivery">
+													<option>Доставка Новой Почтой</option>
+													<option>Приеду в шоурум (г.Киев)</option>
+													<option>Пока не знаю. Жду звонка</option>
+												</select>
+											</label>
+										</div>
+										<p class="deliv">
+											Сразу после отправки заявки Вы окажетесь на странице определения размера.
+											Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
+											Если вы не уверены в размере - мы поможем по телефону.
+										</p>
+										<button class="btn-lg btn-success" type="submit">Отправить заявку                                   </button><a class="close" title="Закрыть" href="#close"> </a>
+									</form>
+								</div>
+							</div>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="./img/wear5-1.png">
+							<p class="section__price">520 грн.</p>
+							<p class="section__price_nonprice">460 грн.</p>
+							<button class="button_price"> <a class="button__btn" href="#win5">Подробнее</a></button><a class="overlay" id="win5" href="#x">   </a>
+							<div class="popup"> 
+								<h3 class="title__name title__name_dark">Купальник SunSet</h3>
+								<div class="popup__wear">             
+									<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear5-1.png"><img src="./img/wear5-2.png"><img src="./img/wear5-3.png"><img src="./img/wear5-4.png"><img src="./img/wear5-5.png"><img src="./img/wear5-6.png"><img src="./img/wear5-7.png"><img src="./img/wear5-8.png"><img src="./img/wear5-9.png"><img src="./img/wear5-10.png"></div>
+									<form class="form" id="form">
+										<div class="popup__first">    
+											<p class="section__description">Размеры: S, M, L </p>
+											<p class="section__description">Материал: Nylon, Spandex  </p>
+										</div>
 										<div class="form-inputs">
 											<div class="form-group">
 												<label for="lead_city">В каком Вы городе?</label>
