--- a/app/popup.html
+++ b/app/popup.html
@@ -1,27 +1,13 @@
 
 <div class="popup"> 
-	<div class="popup__wear">
-		<div class="popup__first">
-			<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
-			<p class="section__description">Размеры: S, M, L </p>
-			<p class="section__description">Материал: Nylon, Spandex</p><img class="deliv__pic" src="./img/wear1-1.png"/>
-		</div>
-		<!--.fotorama(data-width="100%"     
-		data-minwidth="320"
-		data-maxwidth="820"
-		data-maxheight='300'     
-		data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')  
-		-->
+	<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
+	<div class="popup__wear"> 
+		<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-minheight="100" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear1-1.png"/><img src="./img/wear1-2.png"/><img src="./img/wear1-3.png"/></div>
 		<form class="form" id="form">
+			<div class="popup__first">     
+				<p class="section__description">Размеры: S, M, L </p>
+				<p class="section__description">Материал: Nylon, Spandex  </p>
+			</div>
 			<div class="form-inputs">
 				<div class="form-group">
 					<label for="lead_city">В каком Вы городе?</label>
@@ -46,7 +32,8 @@
 				Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
 				Если вы не уверены в размере - мы поможем по телефону.
 			</p>
-			<button class="btn-lg btn-success" type="submit">Отправить заявку                                   </button><a class="close" title="Закрыть" href="#close"> </a>
+			<button class="btn-lg btn-success" id="send" type="submit">Отправить заявку     </button>
+			<button class="btn-lg btn-success" id="tel" type="submit">Заказать звонок                               </button><a class="close" title="Закрыть" href="#close"> </a>
 		</form>
 	</div>
 </div>
