--- a/app/popup2.html
+++ b/app/popup2.html
@@ -1,27 +1,13 @@
 
 <div class="popup"> 
-	<div class="popup__wear">
-		<div class="popup__first">
-			<h3 class="title__name title__name_dark">Купальник SunSet</h3>
-			<p class="section__description">Размеры: S, M, L </p>
-			<p class="section__description">Материал: Nylon, Spandex</p><img class="deliv__pic" src="./img/wear3-3.png"/>
-		</div>
-		<!--.fotorama(data-width="100%"     
-		data-minwidth="320"
-		data-maxwidth="820"
-		data-maxheight='300'     
-		data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')
-		img(src='./img/wear.jpg')
-		img(src='./img/girl.jpg')  
-		-->
+	<h3 class="title__name title__name_dark">Купальник SunSet</h3>
+	<div class="popup__wear">        
+		<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear2-1.png"/><img src="./img/wear2-2.png"/><img src="./img/wear2-3.png"/></div>
 		<form class="form" id="form">
+			<div class="popup__first">     
+				<p class="section__description">Размеры: S, M, L </p>
+				<p class="section__description">Материал: Nylon, Spandex</p>
+			</div>
 			<div class="form-inputs">
 				<div class="form-group">
 					<label for="lead_city">В каком Вы городе?</label>
