--- a/app/popup4.html
+++ b/app/popup4.html
@@ -1,12 +1,12 @@
 
 <div class="popup"> 
-	<h3 class="title__name title__name_dark">Купальник SunRise</h3>
-	<div class="popup__wear">  
-		<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear3-1.png"/><img src="./img/wear3-2.png"/><img src="./img/wear3-3.png"/><img src="./img/wear3-4.png"/><img src="./img/wear3-5.png"/><img src="./img/wear3-6.png"/></div>
+	<h3 class="title__name title__name_dark">Купальник SunSet</h3>
+	<div class="popup__wear">            
+		<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/wear4-1.png"/><img src="./img/wear4-2.png"/><img src="./img/wear4-3.png"/><img src="./img/wear4-4.png"/></div>
 		<form class="form" id="form">
 			<div class="popup__first">     
 				<p class="section__description">Размеры: S, M, L </p>
-				<p class="section__description">Материал: Nylon, Spandex</p>
+				<p class="section__description">Материал: Nylon, Spandex </p>
 			</div>
 			<div class="form-inputs">
 				<div class="form-group">
